# custom-gift-send

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.ini  py.typed  pyproject.toml  setup.py
custom_gift_send/: __init__.py  custom_gift_send.py
custom_gift_send.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
